[package]
name = "cringify"
version = "0.1.1"
authors = ["stealthanthrax <sansyrox@gmail.com>"]
edition = "2018"
description = "Annoy your friends with the cringified text"
license = "MIT"
homepage = "https://github.com/sansyrox/cringify"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
