[package]
name = "cringify"
version = "0.1.1"
authors = ["stealthanthrax <sansyrox@gmail.com>"]
edition = "2018"
description = "Annoy your friends with the cringified text"
license = "MIT"
homepage = "https://github.com/sansyrox/cringify"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cringify"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.19"
features = ["extension-module"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
